# gis-application-template

./: README.md  config.yaml  run.sh
backend/: main.py  pyproject.toml  requirements.in
frontend/: package-lock.json  package.json  webpack.config.js
frontend/src/: app.js
